updates to MostSoldOutArtist